LPS-99404 Build lang

--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_bg.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=Моля, предоставете валидна конфигурация за фрагмента. (Automatic Translation)
 propagate=Пропагандира (Automatic Translation)
 propagation=Размножаване (Automatic Translation)
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=Преименуване на фрагмент (Automatic Translation)
 section=Раздел (Automatic Translation)
 select-collection=Избор на колекция (Automatic Translation)
