--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_cs.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=Zadejte platnou konfiguraci fragmentu. (Automatic Translation)
 propagate=Šířit (Automatic Translation)
 propagation=Propagace (Automatic Translation)
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=Přejmenovat Fragment (Automatic Translation)
 section=Oddíl (Automatic Translation)
 select-collection=Vybrat sbírku (Automatic Translation)
