--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_de.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_de.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=Bitte geben Sie eine gültige Konfiguration für das Fragment an.
 propagate=Vererben
 propagation=Vererbung
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=Fragment umbenennen
 section=Abschnitt
 select-collection=Sammlung auswählen
