--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_el.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_el.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=Δώστε μια έγκυρη ρύθμιση παραμέτρων για το τμήμα. (Automatic Translation)
 propagate=Διαδίδουν (Automatic Translation)
 propagation=Πολλαπλασιασμού (Automatic Translation)
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=Μετονομασία τμήματος (Automatic Translation)
 section=Τμήμα (Automatic Translation)
 select-collection=Επιλογή συλλογής (Automatic Translation)
