--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_fa.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=لطفاً یک پیکربندی معتبر برای قطعه ارائه دهید. (Automatic Translation)
 propagate=منتشر کردن
 propagation=انتشار (Automatic Translation)
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=تغییر نام قطعه (Automatic Translation)
 section=بخش
 select-collection=انتخاب مجموعه (Automatic Translation)
