--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_in.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_in.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=Harap berikan konfigurasi yang valid untuk fragmen. (Automatic Translation)
 propagate=Menyebarkan (Automatic Translation)
 propagation=Propagasi (Automatic Translation)
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=Mengubah nama fragmen (Automatic Translation)
 section=Bagian (Automatic Translation)
 select-collection=Pilih koleksi (Automatic Translation)
