--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_ja.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=このフラグメント用の有効な設定を行ってください。
 propagate=プロパゲート
 propagation=プロパゲーション
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=フラグメント名を変更
 section=セクション
 select-collection=コレクションを選択
