--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_ko.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=조각에 대한 유효한 구성을 제공하십시오. (Automatic Translation)
 propagate=전파 (Automatic Translation)
 propagation=전파 (Automatic Translation)
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=조각 이름 바꾸기 (Automatic Translation)
 section=섹션 (Automatic Translation)
 select-collection=컬렉션 선택 (Automatic Translation)
