--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_lt.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=Pateikite tinkamą fragmento konfigūraciją. (Automatic Translation)
 propagate=Skleisti (Automatic Translation)
 propagation=Dauginimas (Automatic Translation)
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=Pervardyti fragmentas (Automatic Translation)
 section=Skyriuje (Automatic Translation)
 select-collection=Pasirinkite kolekcija (Automatic Translation)
