--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_pl.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=Podaj prawidłową konfigurację dla fragmentu. (Automatic Translation)
 propagate=Propagowanie (Automatic Translation)
 propagation=Propagacja (Automatic Translation)
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=Zmień nazwę Fragment (Automatic Translation)
 section=Sekcji (Automatic Translation)
 select-collection=Wybierz kolekcję (Automatic Translation)
