--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_sk.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=Zadajte platnú konfiguráciu pre fragment. (Automatic Translation)
 propagate=Propagovať (Automatic Translation)
 propagation=Rozmnožovanie (Automatic Translation)
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=Premenovať Fragment (Automatic Translation)
 section=Sekcii (Automatic Translation)
 select-collection=Vybrať kolekciu (Automatic Translation)
