--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_sl.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=Navedite veljavno konfiguracijo za fragment. (Automatic Translation)
 propagate=Promovirati (Automatic Translation)
 propagation=Razmnoževanje (Automatic Translation)
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=Preimenovati Fragment (Automatic Translation)
 section=Oddelek (Automatic Translation)
 select-collection=Izberi zbirko (Automatic Translation)
