--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_th.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_th.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=โปรดระบุการกำหนดค่าที่ถูกต้องสำหรับแฟรกเมนต์ (Automatic Translation)
 propagate=เผยแพร่ (Automatic Translation)
 propagation=การเผยแพร่ (Automatic Translation)
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=เปลี่ยนชื่อส่วน (Automatic Translation)
 section=ส่วน (Automatic Translation)
 select-collection=เลือกคอลเลกชั่น (Automatic Translation)
