--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_uk.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=Будь ласка, надайте правильну конфігурацію для фрагмента. (Automatic Translation)
 propagate=Розповсюдження (Automatic Translation)
 propagation=Розповсюдження (Automatic Translation)
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=Перейменувати фрагмент (Automatic Translation)
 section=Розділі (Automatic Translation)
 select-collection=Виберіть збірку (Automatic Translation)
