--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_zh_CN.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=请为片段提供有效的配置。
 propagate=传播
 propagation=传播
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=重命名片段
 section=部分
 select-collection=选择集合
