--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_zh_TW.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=請為片段提供有效的配置。 (Automatic Translation)
 propagate=傳播 (Automatic Translation)
 propagation=傳播 (Automatic Translation)
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=重命名片段 (Automatic Translation)
 section=部分 (Automatic Translation)
 select-collection=選擇集合 (Automatic Translation)
