--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_ar.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=الرجاء توفير تكوين صالح للجزء. (Automatic Translation)
 propagate=نشر
 propagation=النشر
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=تسمية التجزئة
 section=القسم
 select-collection=تحديد مجموعة
