--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_ca.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=Proporcioneu una configuració vàlida per al fragment.
 propagate=Propaga
 propagation=Propagació
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=Canvia el nom del fragment
 section=Secció
 select-collection=Selecciona una col·lecció
