--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_es.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=Proporcione una configuración válida para el fragmento.
 propagate=Propagar
 propagation=Propagación
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=Cambio de nombre de fragmento
 section=Sección
 select-collection=Seleccionar colección
