--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_et.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_et.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=Palun esitage fragmendi jaoks sobiv konfiguratsioon. (Automatic Translation)
 propagate=Propageerida (Automatic Translation)
 propagation=Paljundamine (Automatic Translation)
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=Nimeta Fragment (Automatic Translation)
 section=Jagu (Automatic Translation)
 select-collection=Vali kollektsioon (Automatic Translation)
