--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_hi_IN.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=कृपया खंड के लिए एक मान्य कॉन्फ़िगरेशन प्रदान करें. (Automatic Translation)
 propagate=प्रोपेगेट (Automatic Translation)
 propagation=प्रोपेगेशन (Automatic Translation)
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=अंश का नाम बदलें (Automatic Translation)
 section=अनुभाग (Automatic Translation)
 select-collection=संग्रह का चयन करें (Automatic Translation)
