--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_hu.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=Adjon meg egy érvényes konfigurációt a töredéknek.
 propagate=Terjesztés
 propagation=Terjesztés
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=Töredék átnevezése
 section=Szakasz
 select-collection=Gyűjtemény kiválasztása
