--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_it.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_it.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=Fornire una configurazione valida per il frammento. (Automatic Translation)
 propagate=Propaga
 propagation=Propagazione
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=Rinominare il frammento (Automatic Translation)
 section=sezione f (Automatic Translation)
 select-collection=Seleziona raccolta (Automatic Translation)
