--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_iw.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=נא ספק תצורה חוקית עבור המקטע. (Automatic Translation)
 propagate=הפץ
 propagation=הפצה
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=שנה את שם הקטע
 section=סעיף (Automatic Translation)
 select-collection=בחר אוסף (Automatic Translation)
