--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_nb.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=Angi en gyldig konfigurasjon for fragmentet. (Automatic Translation)
 propagate=Overføre (Automatic Translation)
 propagation=Forplantning (Automatic Translation)
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=Endre Fragment (Automatic Translation)
 section=Delen (Automatic Translation)
 select-collection=Velg samling (Automatic Translation)
