--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_ro.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=Vă rugăm să furnizați o configurație validă pentru fragment. (Automatic Translation)
 propagate=Propaga (Automatic Translation)
 propagation=Propagarea (Automatic Translation)
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=Redenumiţi Fragment (Automatic Translation)
 section=Secţiunea (Automatic Translation)
 select-collection=Selectare colecție (Automatic Translation)
