--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_ru.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=Пожалуйста, предоставьте действительную конфигурацию для фрагмента. (Automatic Translation)
 propagate=Распространение (Automatic Translation)
 propagation=Распространение (Automatic Translation)
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=Переименование фрагментов (Automatic Translation)
 section=Разделе (Automatic Translation)
 select-collection=Выберите коллекцию (Automatic Translation)
