--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_ta_IN.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=Please provide a valid configuration for the fragment. (Automatic Copy)
 propagate=Propagate
 propagation=Propagation
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=Fragment-ன் பெயர் மாற்று
 section=பகுதி
 select-collection=கலெக்ஷனைத் தேரந்தெடு
