--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_tr.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=Lütfen parça için geçerli bir yapılandırma sağlayın. (Automatic Translation)
 propagate=Yaymak (Automatic Translation)
 propagation=Yayma (Automatic Translation)
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=Bölümü yeniden adlandırma (Automatic Translation)
 section=Bölüm (Automatic Translation)
 select-collection=Koleksiyon Seç (Automatic Translation)
