--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_vi.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=Xin vui lòng cung cấp một cấu hình hợp lệ cho các mảnh. (Automatic Translation)
 propagate=Tuyên truyền (Automatic Translation)
 propagation=Tuyên truyền (Automatic Translation)
+read-only-view=Read Only View (Automatic Copy)
+read-only-view-help=The fragment cannot be edited because it belongs to a different site. (Automatic Copy)
 rename-fragment=Đổi tên đoạn (Automatic Translation)
 section=Phần (Automatic Translation)
 select-collection=Chọn bộ sưu tập (Automatic Translation)
