--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ar.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=اسحب وأسقط المع
 drag-and-drop-over-an-existing-criteria-to-form-groups=اسحب وأسقط المعايير الموجودة لتشكيل مجموعات.
 edit-test=تحرير اختبار (Automatic Translation)
 edit-test-error=حدث خطأ غير متوقع أثناء تحرير اختبار A/B. (Automatic Translation)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=لإنشاء واحد، اسحب العناصر من الشريط الجانبي وأسقطها هنا.
 enable-content-recommendation=تمكين توصية المحتوى (Automatic Translation)
 enable-content-recommendation-help=تمكين هذا الخيار لتصفية المحتوى مع شروط اهتمام المستخدم. (Automatic Translation)
