--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_bg.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=Влачите и пуска
 drag-and-drop-over-an-existing-criteria-to-form-groups=Плъзнете и пуснете над съществуващите критерии, за да формират групи. (Automatic Translation)
 edit-test=Редактиране на тест (Automatic Translation)
 edit-test-error=Възникна неочаквана грешка при редактирането на A/B теста. (Automatic Translation)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=За да създадете нов, плъзнете елементите от страничната лента и ги пуснете тук. (Automatic Translation)
 enable-content-recommendation=Разрешаване на препоръка за съдържание (Automatic Translation)
 enable-content-recommendation-help=Активирайте тази опция, за да филтрирате съдържанието с условията на потребителя за интерес. (Automatic Translation)
