--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_es.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=Arrastre y coloque los crite
 drag-and-drop-over-an-existing-criteria-to-form-groups=Arrastre y coloque un criterio existente para formar grupos.
 edit-test=Editar prueba (Automatic Translation)
 edit-test-error=Se ha producido un error inesperado al editar la prueba A/B. (Automatic Translation)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=Para crear una nueva, arrastre elementos desde la barra lateral y colóquelos aquí.
 enable-content-recommendation=Habilitar recomendación de contenido
 enable-content-recommendation-help=Habilite esta opción para filtrar el contenido con las condiciones de interés del usuario.
