--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_et.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=Lohistage ja kukutage kritee
 drag-and-drop-over-an-existing-criteria-to-form-groups=Lohistage ja tilk üle olemasolevate kriteeriumide moodustada rühmad. (Automatic Translation)
 edit-test=Redigeeri testi (Automatic Translation)
 edit-test-error=A/B-testi redigeerimisel ilmnes ootamatu tõrge. (Automatic Translation)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=Luua uue, lohistage üksused vasaku ja kukutage need siin. (Automatic Translation)
 enable-content-recommendation=Luba Sisusoovitus (Automatic Translation)
 enable-content-recommendation-help=Lubage see suvand sisu filtreerimiseks kasutaja huvide tingimustega. (Automatic Translation)
