--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_fi.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=Vedä ja pudota -kriteeri oi
 drag-and-drop-over-an-existing-criteria-to-form-groups=Vedä ja pudota olemassa olevan kriteerin päälle muodostaaksesi ryhmiä.
 edit-test=Edit Test (Automatic Copy)
 edit-test-error=An unexpected error occurred while editing the A/B test. (Automatic Copy)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=Luodaksesi uuden, vedä tuotteita sivupalkista, ja pudota ne tänne.
 enable-content-recommendation=Ota Käyttöön Sisältösuositus
 enable-content-recommendation-help=Ota käyttöön tämä vaihtoehto suodattaaksesi sisältöä käyttäjän kiinnostuksen kohteiden mukaan.
