--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_fr.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=Faites glisser le critère d
 drag-and-drop-over-an-existing-criteria-to-form-groups=Faites glisser sur un critère existant pour former des groupes.
 edit-test=Test d'édition (Automatic Translation)
 edit-test-error=Une erreur inattendue s'est produite lors de l'édition du test A/B. (Automatic Translation)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=Pour en créer un nouveau, faites glisser les éléments de la barre latérale et déposez-les ici.
 enable-content-recommendation=Activer les recommandation de contenu
 enable-content-recommendation-help=Activez cette option pour filtrer le contenu en fonction des conditions d'intérêt de l'utilisateur.
