--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_hu.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=Szabályok hozzáadásához 
 drag-and-drop-over-an-existing-criteria-to-form-groups=Csoportok kialakításához húzza rá egy meglévő feltételre.
 edit-test=Tesztoldal szerkesztése (Automatic Translation)
 edit-test-error=Váratlan hiba történt az A/B teszt szerkesztésekor. (Automatic Translation)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=Ha újat kíván létrehozni, húzza ide az elemeket az oldalsó sávból.
 enable-content-recommendation=Tartalomajánlat engedélyezése
 enable-content-recommendation-help=Engedélyezze a lehetőséget a tartalom felhasználó érdeklődése alapján történő szűréséhez.
