--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_it.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=Criterio di trascinamento de
 drag-and-drop-over-an-existing-criteria-to-form-groups=Trascinare e rilasciare oltre un criterio esistente per formare gruppi. (Automatic Translation)
 edit-test=Modifica test (Automatic Translation)
 edit-test-error=Si è verificato un errore imprevisto durante la modifica del test A/B. (Automatic Translation)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=Per crearne uno nuovo, trascinare gli elementi dalla barra laterale e farli cadere qui. (Automatic Translation)
 enable-content-recommendation=Abilita raccomandazione sui contenuti (Automatic Translation)
 enable-content-recommendation-help=Attivare questa opzione per filtrare il contenuto in base alle condizioni di interesse dell'utente. (Automatic Translation)
