--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_lt.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=Vilkite ir upuść kriteriju
 drag-and-drop-over-an-existing-criteria-to-form-groups=Vilkite ir upuść per esamus kriterijus į grupes. (Automatic Translation)
 edit-test=Redaguoti testą (Automatic Translation)
 edit-test-error=Redaguojant A/B testą įvyko netikėta klaida. (Automatic Translation)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=Norėdami sukurti naują, vilkite elementus iš šoninės juostos ir palikite juos čia. (Automatic Translation)
 enable-content-recommendation=Turinio rekomendacijos įjungimas (Automatic Translation)
 enable-content-recommendation-help=Įgalinkite šią parinktį, kad turinys būtų filtruojamas pagal vartotojo dominantas sąlygas. (Automatic Translation)
