--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_sk.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=Drag and drop kritérium z p
 drag-and-drop-over-an-existing-criteria-to-form-groups=Drag and drop existujúcich kritérií tvoriť skupiny. (Automatic Translation)
 edit-test=Upraviť test (Automatic Translation)
 edit-test-error=Počas úpravy testu A/B sa vyskytla neočakávaná chyba. (Automatic Translation)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=Vytvoriť novú, presuňte položky myšou z bočného panela a pusť je tu. (Automatic Translation)
 enable-content-recommendation=Povoliť odporúčanie pre obsah (Automatic Translation)
 enable-content-recommendation-help=Povoľte túto možnosť na filtrovanie obsahu s podmienkami používateľa. (Automatic Translation)
