--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_sl.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=Povleci in spusti merilo pra
 drag-and-drop-over-an-existing-criteria-to-form-groups=Povlecite in spustite obstoječe merila, ki jih oblikujejo skupine. (Automatic Translation)
 edit-test=Uredi preskus (Automatic Translation)
 edit-test-error=Med urejanjem preskusa A/B je prišlo do nepričakovane napake. (Automatic Translation)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=Če želite ustvariti novega, povlecite elemente iz stranske vrstice in jih spustite tukaj. (Automatic Translation)
 enable-content-recommendation=Omogoči priporočilo o vsebini (Automatic Translation)
 enable-content-recommendation-help=Omogočite to možnost, če želite vsebino filtrirati s pogoji zanimanja uporabnika. (Automatic Translation)
