--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ta_IN.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=ரூல்ஸ்களை 
 drag-and-drop-over-an-existing-criteria-to-form-groups=Existing criteria-லிருந்து form groups-க்கு Drag and drop செய்து போடவும்.
 edit-test=Edit Test (Automatic Copy)
 edit-test-error=An unexpected error occurred while editing the A/B test. (Automatic Copy)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=புதிய நிபந்தனைகளை உருவாக்க, sidebar-ல் இருந்து items-களை Drag and drop செய்து போடவும்.
 enable-content-recommendation=Enable Content Recommendation (Automatic Copy)
 enable-content-recommendation-help=Enable this option to filter the content with user's terms of interest. (Automatic Copy)
