--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_th.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=ลาก และวาง
 drag-and-drop-over-an-existing-criteria-to-form-groups=ลาก และปล่อยผ่านเป็นเกณฑ์ที่มีอยู่เพื่อ (Automatic Translation)
 edit-test=แก้ไขการทดสอบ (Automatic Translation)
 edit-test-error=มีข้อผิดพลาดที่ไม่คาดคิดเกิดขึ้นขณะแก้ไขการทดสอบ A/B (Automatic Translation)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=สร้างใหม่ ลากสินค้าจาก sidebar และวางไว้ที่นี่ (Automatic Translation)
 enable-content-recommendation=เปิดใช้งานการแนะนำเนื้อหา (Automatic Translation)
 enable-content-recommendation-help=เปิดใช้งานตัวเลือกนี้เพื่อกรองเนื้อหาด้วยเงื่อนไขที่น่าสนใจของผู้ใช้ (Automatic Translation)
