--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_tr.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=Sürükle ve bırak ölçüt
 drag-and-drop-over-an-existing-criteria-to-form-groups=Sürükleyin ve gruplar oluşturmak için varolan bir ölçüt üzerinde bırakın. (Automatic Translation)
 edit-test=Testi Düzenle (Automatic Translation)
 edit-test-error=A/B testi düzenlenirken beklenmeyen bir hata oluştu. (Automatic Translation)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=Yeni bir oluşturmak için öğeleri kenar çubuğundan sürükleyin ve onları buraya bırak. (Automatic Translation)
 enable-content-recommendation=Içerik önerisini etkinleştir (Automatic Translation)
 enable-content-recommendation-help=İçeriği kullanıcının ilgi koşulları ile filtrelemek için bu seçeneği etkinleştirin. (Automatic Translation)
