--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ca.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=Arrossegueu i deixeu anar un
 drag-and-drop-over-an-existing-criteria-to-form-groups=Arrossegueu i deixeu anar un criteri existent per formar grups.
 edit-test=Edita la prova (Automatic Translation)
 edit-test-error=S'ha produït un error inesperat en editar la prova A/B. (Automatic Translation)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=Per crear-ne una de nova, arrossegueu els elements de la barra lateral i deixeu-los anar aquí.
 enable-content-recommendation=Habiliteu la recomanació de contingut
 enable-content-recommendation-help=Habiliteu aquesta opció per filtrar el contingut amb els termes d'interès de l'usuari.
