--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_cs.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=Přetáhněte a umístěte k
 drag-and-drop-over-an-existing-criteria-to-form-groups=Přetáhněte a umístěte nad stávající kritéria vytvoření skupiny. (Automatic Translation)
 edit-test=Upravit test (Automatic Translation)
 edit-test-error=Při úpravách testu A/B došlo k neočekávané chybě. (Automatic Translation)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=Chcete-li vytvořit nové pravidlo, přetáhněte položky z postranního panelu a umístit sem. (Automatic Translation)
 enable-content-recommendation=Povolit doporučení obsahu (Automatic Translation)
 enable-content-recommendation-help=Povolte tuto volbu, pokud chcete filtrovat obsah s úrokovými podmínkami uživatele. (Automatic Translation)
