--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_de.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=Ziehen Sie das Kriterium per
 drag-and-drop-over-an-existing-criteria-to-form-groups=Ziehen Sie mit der Maus ein bestehendes Kriterium über ein anderes, um Gruppen zu bilden.
 edit-test=Edit Test (Automatic Copy)
 edit-test-error=An unexpected error occurred while editing the A/B test. (Automatic Copy)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=Um eine neue zu erstellen, ziehen Sie Elemente aus der Sidebar und legen sie hier ab.
 enable-content-recommendation=Inhaltsempfehlung aktivieren
 enable-content-recommendation-help=Aktivieren Sie diese Option, um den Inhalt nach den Interessen des Benutzers zu filtern.
