--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_el.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=Σύρετε και αποθ
 drag-and-drop-over-an-existing-criteria-to-form-groups=Σύρετε και αποθέστε πάνω από ένα υπάρχον κριτήρια να σχηματίζουν ομάδες. (Automatic Translation)
 edit-test=Δοκιμή επεξεργασίας (Automatic Translation)
 edit-test-error=Παρουσιάστηκε μη αναμενόμενο σφάλμα κατά την επεξεργασία της δοκιμής A/B. (Automatic Translation)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=Για να δημιουργήσετε ένα νέο, σύρετε τα στοιχεία από την πλευρική εργαλειοθήκη και αποθέστε τα εδώ. (Automatic Translation)
 enable-content-recommendation=Ενεργοποίηση σύστασης περιεχομένου (Automatic Translation)
 enable-content-recommendation-help=Ενεργοποιήστε αυτήν την επιλογή για να φιλτράρετε το περιεχόμενο με τους όρους ενδιαφέροντος του χρήστη. (Automatic Translation)
