--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_in.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=Drag dan drop kriteria dari 
 drag-and-drop-over-an-existing-criteria-to-form-groups=Drag dan drop atas kriteria yang ada untuk membentuk kelompok. (Automatic Translation)
 edit-test=Edit tes (Automatic Translation)
 edit-test-error=Galat tak terduga terjadi saat mengedit uji A/B. (Automatic Translation)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=Untuk membuat yang baru, menarik item dari sidebar dan menjatuhkan mereka di sini. (Automatic Translation)
 enable-content-recommendation=Aktifkan rekomendasi konten (Automatic Translation)
 enable-content-recommendation-help=Aktifkan opsi ini untuk memfilter konten dengan persyaratan minat pengguna. (Automatic Translation)
