--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_iw.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=גרור ושחרר קריט
 drag-and-drop-over-an-existing-criteria-to-form-groups=גרור ושחרר מעל קריטריונים קיימים כדי ליצור קבוצות. (Automatic Translation)
 edit-test=ערוך מבחן (Automatic Translation)
 edit-test-error=אירעה שגיאה בלתי צפויה בעת עריכת הבדיקה A/B. (Automatic Translation)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=כדי ליצור אחד חדש, גרור פריטים מהסרגל הצידי ושחרר אותם כאן. (Automatic Translation)
 enable-content-recommendation=אפשר המלצת תוכן (Automatic Translation)
 enable-content-recommendation-help=הפוך אפשרות זו לזמינה כדי לסנן את התוכן עם תנאי העניין של המשתמש. (Automatic Translation)
