--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_nb.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=Dra og slipp kriterium fra r
 drag-and-drop-over-an-existing-criteria-to-form-groups=Dra og slipp over en eksisterende kriterier å danne grupper. (Automatic Translation)
 edit-test=Rediger test (Automatic Translation)
 edit-test-error=Det oppstod en uventet feil under redigering av A/B-testen. (Automatic Translation)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=Opprette en ny, dra elementer fra sidepanelet og slipp dem her. (Automatic Translation)
 enable-content-recommendation=Aktivere innholds anbefaling (Automatic Translation)
 enable-content-recommendation-help=Aktiver dette alternativet for å filtrere innholdet med brukerens interesse uttrykk. (Automatic Translation)
