--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_nl.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=Versleep het criterium van r
 drag-and-drop-over-an-existing-criteria-to-form-groups=Versleep tot over een bestaand criterium om groepen te vormen.
 edit-test=Edit Test (Automatic Copy)
 edit-test-error=An unexpected error occurred while editing the A/B test. (Automatic Copy)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=Versleep items van de zijbalk naar hier om een nieuwe te maken.
 enable-content-recommendation=Inhoudaanbeveling inschakelen
 enable-content-recommendation-help=Schakel deze optie in om de inhoud te filteren volgens de termen van de interesses van de gebruiker.
