--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_nl_BE.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=Drag and drop criterion from
 drag-and-drop-over-an-existing-criteria-to-form-groups=Drag and drop over an existing criteria to form groups. (Automatic Copy)
 edit-test=Edit Test (Automatic Copy)
 edit-test-error=An unexpected error occurred while editing the A/B test. (Automatic Copy)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=To create a new one, drag items from the sidebar and drop them here. (Automatic Copy)
 enable-content-recommendation=Enable Content Recommendation (Automatic Copy)
 enable-content-recommendation-help=Enable this option to filter the content with user's terms of interest. (Automatic Copy)
