--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_pl.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=Przeciągnij i upuść kryte
 drag-and-drop-over-an-existing-criteria-to-form-groups=Przeciągnij i upuść na istniejących kryteriów do tworzenia grup. (Automatic Translation)
 edit-test=Edytuj test (Automatic Translation)
 edit-test-error=Wystąpił nieoczekiwany błąd podczas edytowania testu A/B. (Automatic Translation)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=Aby utworzyć nową, przeciągnij elementy z paska bocznego i upuść je tutaj. (Automatic Translation)
 enable-content-recommendation=Włącz rekomendację treści (Automatic Translation)
 enable-content-recommendation-help=Włącz tę opcję, aby filtrować zawartość z warunkami użytkownika. (Automatic Translation)
