--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_pt_BR.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=Arraste e solte um critério
 drag-and-drop-over-an-existing-criteria-to-form-groups=Arraste e solte sobre um critério existente para formar grupos.
 edit-test=Editar teste (Automatic Translation)
 edit-test-error=Ocorreu um erro inesperado ao editar o teste a/B. (Automatic Translation)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=Para criar o novo, arraste os itens da barra lateral e solte-os aqui.
 enable-content-recommendation=Habilitar Recomendação de Conteúdo
 enable-content-recommendation-help=Habilitar esta opção para filtrar o conteúdo com os termos de interesse do usuário.
