--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ro.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=Drag and drop criteriu din d
 drag-and-drop-over-an-existing-criteria-to-form-groups=Glisaţi şi fixaţi peste o criteriilor existente pentru a forma grupuri. (Automatic Translation)
 edit-test=Editare test (Automatic Translation)
 edit-test-error=S-a produs o eroare neașteptată la editarea testului A/B. (Automatic Translation)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=Pentru a crea unul nou, glisaţi elementele din bara laterală şi fixaţi-le aici. (Automatic Translation)
 enable-content-recommendation=Activare recomandare conținut (Automatic Translation)
 enable-content-recommendation-help=Activați această opțiune pentru a filtra conținutul cu termenii de interes ai utilizatorului. (Automatic Translation)
