--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ru.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=Перетащите и drop
 drag-and-drop-over-an-existing-criteria-to-form-groups=Перетащите и поместите над существующих критериев для формирования групп. (Automatic Translation)
 edit-test=Тест на отодвилое (Automatic Translation)
 edit-test-error=При редактировании теста A/B произошла неожиданная ошибка. (Automatic Translation)
+edit-variant=Edit Variant (Automatic Copy)
+edit-variant-error-message=An unexpected error occurred while editing the variant. (Automatic Copy)
 empty-conditions-message=Чтобы создать новый, перетащите элементы из боковой панели и поместите их здесь. (Automatic Translation)
 enable-content-recommendation=Рекомендация включить контент (Automatic Translation)
 enable-content-recommendation-help=Включите эту опцию для фильтрации содержимого с условиями интереса пользователя. (Automatic Translation)
